assets/style.css
/*Rooting*/
:root {
    /*Colors*/
    /*Main Colors*/
    --primary: rgb(10, 140, 247);
    --secondary: rgb(53,213,242);
    --third: rgb(18, 128, 217);  
    --tert: rgb(9,26,55);  
    --white: rgb(247, 247, 247);
    --black: rgb(26, 26, 26);
    --bg: rgb(247, 247, 247);

    /*Values*/
    --border-radius: 12px;
    --padding-sm: 12px 8px;
    --padding-btn: 12px 30px;
    --container-padding: 18px 15px;
    --container-padding-lg: 13px 32px;
    --component-padding: 20px 10px;
}

/*Initial*/
body, html {
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: var(--bg);
}

/*flex*/
.flex {
    display: flex;
}

.flex-center {
    justify-content: center;
    align-items: center;
}

.flex-justify {
    align-items: center;
    justify-content: space-between;
}

/*Components*/
/*FIXME: Die Transition funktioniert nicht richtig*/
#input-area {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.5s ease-in-out;
}

#input-area.show {
    opacity: 1;
    visibility: visible;
}

#input-area.hide {
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.5s ease-in-out, visibility 0s 0.5s;
}

.input-area-input {
    width: 20vw;
    padding: var(--padding-sm);
    background-color: transparent;
    border: 2px solid var(--primary);
    border-radius: var(--border-radius);
    color: black;
}

.submit-btn {
    border: none;
    padding: var(--padding-btn);
    border-radius: var(--border-radius);
    background-color: var(--primary);
    color: white;
    font-weight: bold; 
}

.submit-btn:hover {
    background-color: var(--third);
    cursor: pointer;
}

.navbar {
    height: 8vh;
    display: flex;
    justify-content: space-between;
    padding: var(--container-padding-lg);
    background-color: var(--white);
}

#logo-container {
    display: flex;
    align-items: center;
}

.branding {
    margin-right: 10px;
    height: 90px;
    width: 230px;
    object-fit: contain;
}

#nav-button-container {
    display: flex;
    justify-content: center;
    align-self: center;
    gap: 10px;
}

#add-button {
    background: var(--primary);
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    border: none;
    height: 5vh;
    width: 5vh;
    cursor: pointer;
    font-size: 20px;
    border-radius: var(--border-radius);
}

#add-button:hover {
    background-color: var(--third);
}

.navbar-btn-secondary {
    color: var(--primary);
    background: none;
    border: none;
    font-size: 18px;
}

.navbar-btn-secondary:hover {
    color: var(--third);
    cursor: pointer;
}

.point-list {
    width: 10vw;
    height: 90vh;
    overflow-y: auto;
    background-color: var(--bg);
    padding: var(--container-padding);
    border-left: 2px solid var(--primary);
}

.point-item {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: var(--padding-sm);
    border-bottom: 1px solid var(--primary);
}

.delete-point-btn {
    background-color: var(--primary);
    border: none;
    color: white;
    border-radius: var(--border-radius);
    padding: var(--padding-sm);
    cursor: pointer;
}

.delete-point-btn:hover {
    background-color: var(--third);
}

